--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,7 +18,8 @@
     "@mantine/notifications": "^6.0.9",
     "embla-carousel-react": "^8.0.0-rc01",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
